{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 55,
  "lineage": "7542e9c2-2e5e-4ab8-4418-a51e7e79fdbc",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myCloudEc2",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-086cae3329a3f7d75",
            "arn": "arn:aws:ec2:ap-northeast-2:653739042242:instance/i-0b050d0328b67c8e3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b050d0328b67c8e3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e84ef5228f9e513b",
            "private_dns": "ip-172-52-1-93.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.52.1.93",
            "public_ip": "3.38.233.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01d8ebbc41083e0ef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0270a067308e83bc2",
            "tags": {
              "CreatedAt": "20231116",
              "Name": "myCloud"
            },
            "tags_all": {
              "CreatedAt": "20231116",
              "Name": "myCloud"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0df72b04b5df04a74"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.ssh_key",
            "module.security_group.aws_security_group.myCloudSg",
            "module.vpc.aws_subnet.myCloudPublicSubnet",
            "module.vpc.aws_vpc.myCloudDefaultVpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myCloudSg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:653739042242:security-group/sg-0df72b04b5df04a74",
            "description": "Allow access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df72b04b5df04a74",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 7777,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7777
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "183.100.1.179/32"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "myCloud-sg",
            "name_prefix": "",
            "owner_id": "653739042242",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0240b35b556b1e9f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.myCloudDefaultVpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myCloudIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:653739042242:internet-gateway/igw-081a438d4759a71c2",
            "id": "igw-081a438d4759a71c2",
            "owner_id": "653739042242",
            "tags": {
              "Name": "myCloud-igw"
            },
            "tags_all": {
              "Name": "myCloud-igw"
            },
            "vpc_id": "vpc-0240b35b556b1e9f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myCloudDefaultVpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myCloudRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:653739042242:route-table/rtb-09f1c49eec128d908",
            "id": "rtb-09f1c49eec128d908",
            "owner_id": "653739042242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-081a438d4759a71c2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myCloud-rt"
            },
            "tags_all": {
              "Name": "myCloud-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0240b35b556b1e9f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.myCloudIGW",
            "module.vpc.aws_vpc.myCloudDefaultVpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cicd_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079f86f457ea0281c",
            "route_table_id": "rtb-09f1c49eec128d908",
            "subnet_id": "subnet-0270a067308e83bc2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.myCloudIGW",
            "module.vpc.aws_route_table.myCloudRT",
            "module.vpc.aws_subnet.myCloudPublicSubnet",
            "module.vpc.aws_vpc.myCloudDefaultVpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myCloudPublicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:653739042242:subnet/subnet-0270a067308e83bc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2d",
            "availability_zone_id": "apne2-az4",
            "cidr_block": "172.52.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0270a067308e83bc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "653739042242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myCloud_public_subnet"
            },
            "tags_all": {
              "Name": "myCloud_public_subnet"
            },
            "vpc_id": "vpc-0240b35b556b1e9f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myCloudDefaultVpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myCloudDefaultVpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:653739042242:vpc/vpc-0240b35b556b1e9f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.52.0.0/16",
            "default_network_acl_id": "acl-0754eafbc03035228",
            "default_route_table_id": "rtb-069c058ad3331ad7a",
            "default_security_group_id": "sg-03d2d1db47f39590c",
            "dhcp_options_id": "dopt-0f227c47a7a00df38",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0240b35b556b1e9f6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-069c058ad3331ad7a",
            "owner_id": "653739042242",
            "tags": {
              "Name": "myCloud_default_vpc"
            },
            "tags_all": {
              "Name": "myCloud_default_vpc"
            }
          }
        }
      ]
    }
  ]
}